# rp2040_swim

./: .gitignore  LICENSE  README.md
docs/: limitations.md  protocol.md  stm8s003_quickstart.md  wiring.md
firmware/: CMakeLists.txt
firmware/pio/: swim_rx.pio  swim_rx_decode.pio  swim_rx_width.pio  swim_tx.pio  swim_waveform.pio
firmware/src/: board_rp2040_zero.h  main.c  stm8_dm.c  stm8_dm.h  stm8_flash.c  stm8_flash.h  swim_bits.h  swim_link.c  swim_link.h  swim_phy.c  swim_phy.h  swim_pio_rx.c  swim_pio_rx.h  swim_pio_waveform.c  swim_pio_waveform.h  swim_sync_limits.h  swim_waveform.pio  target_db.c  target_db.h  usb_protocol.c  usb_protocol.h
host/: __init__.py  devices.py  entry_waveform.py  ihex.py  protocol.py  rp2040_swim.py  swim_timing.py
tests/: test_entry_waveform.py  test_ihex.py  test_protocol.py  test_rop_cli.py  test_swim_timing.py
